--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
-    <title>Healthy Visuals</title>
+	  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css' rel='stylesheet' />
+    <title>healthy Visuals</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -371,7 +372,12 @@ text-align: center;
 figcaption {
   display: block;
 }
-         
+           #map {
+        position: absolute;
+		      margin: auto;
+       height: 100%;	      
+        width: 100%;
+      }
           </style>
 
 </head>
@@ -545,7 +551,41 @@ figcaption {
 <figcaption style="font-family:Helvetica Neue" text-align: center>Access to Health Services through Insurance, by Family income (percent poverty threshold)</figcaption>
 
 </figure>
-		    
+		    	    <section class="page-section portfolio" id="portfolio">
+            <div class="container">
+<br>
+		    <div id='map' style="width: 1100px; height: 500px"></div>
+<script>
+mapboxgl.accessToken = 'pk.eyJ1Ijoicm9kcmk2OTEiLCJhIjoiY2szMGsyYTczMHRqbjNtczF0bDg2Zm83YSJ9.91pXtlBbZG8dWo9-hnz04w';
+var map = new mapboxgl.Map({
+container: 'map',
+zoom: 3.68,
+center: [-98.136068, 38.316792],
+style: 'mapbox://styles/rodri691/cknyoija82o7817s0s1yj42a4'
+});
+
+map.on('click', function(e) {
+  var features = map.queryRenderedFeatures(e.point, {
+    layers: ['hospitalclosures'] // replace this with the name of the layer
+  });
+
+  if (!features.length) {
+    return;
+  }
+
+  var feature = features[0];
+
+  var popup = new mapboxgl.Popup({ offset: [0, -15] })
+    .setLngLat(feature.geometry.coordinates)
+    .setHTML('<h3>' + feature.properties.Hospital
+ + '</h3><p>' + feature.properties.ClosureYear + '</p>')
+    .addTo(map);
+});
+
+
+</script>
+		    </div>
+	    </section>
 </div>               
 </div>
     </section>
