--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 	  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css' rel='stylesheet' />
-    <title>healthy Visuals</title>
+    <title>Healthy Visuals</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -454,19 +454,19 @@ figcaption {
 <br>
 		    <br>
 <figure>
-<img src="img/fig1.png" width="900" height="500">
+<img src="img/fig1.png" width="450" height="250">
 	<figcaption style="font-family:Helvetica Neue" text-align="center">Figure 1</figcaption>
 		    </figure>
 		    <br>
 		    <br>
 		    <figure>
-<img src="img/fig2.png" width="900" height="600">
+<img src="img/fig2.png" width="450" height="300">
 			    <figcaption style="font-family:Helvetica Neue" text-align="center">Figure 2</figcaption>
 		    </figure>
 		    <br>
 		    <br>
 		    <figure>
-<img src="img/fig3.png" width="900" height="500">
+<img src="img/fig3.png" width="450" height="250">
 			    <figcaption style="font-family:Helvetica Neue" text-align="center">Figure 3</figcaption>
 		    </figure>
 		    <br>
@@ -551,9 +551,12 @@ figcaption {
 <figcaption style="font-family:Helvetica Neue" text-align: center>Access to Health Services through Insurance, by Family income (percent poverty threshold)</figcaption>
 
 </figure>
-		    	    <section class="page-section portfolio" id="portfolio">
+		    	    
+		     <section class="page-section portfolio" id="portfolio">
             <div class="container">
-<br>
+		     <div class="container">
+		    <p><h2>Rural hospital closures</h2></p>
+
 		    <div id='map' style="width: 1100px; height: 500px"></div>
 <script>
 mapboxgl.accessToken = 'pk.eyJ1Ijoicm9kcmk2OTEiLCJhIjoiY2szMGsyYTczMHRqbjNtczF0bDg2Zm83YSJ9.91pXtlBbZG8dWo9-hnz04w';
@@ -586,6 +589,10 @@ map.on('click', function(e) {
 </script>
 		    </div>
 	    </section>
+		    <section class="page-section portfolio" id="portfolio">
+            <div class="container">
+		     <div class="container">
+		    <p><h2>coclusions</h2></p>
 </div>               
 </div>
     </section>
