--- a/index.html
+++ b/index.html
@@ -454,19 +454,19 @@ figcaption {
 <br>
 		    <br>
 <figure>
-<img src="img/fig1.png" width="450" height="250">
+<img style="display:block;margin:auto;" src="img/fig1.png" text-align:"center">
 	<figcaption style="font-family:Helvetica Neue" text-align="center">Figure 1</figcaption>
 		    </figure>
 		    <br>
 		    <br>
 		    <figure>
-<img src="img/fig2.png" width="450" height="300">
+<img src="display:block;margin:auto;" src="img/fig2.png" text-align:"center">
 			    <figcaption style="font-family:Helvetica Neue" text-align="center">Figure 2</figcaption>
 		    </figure>
 		    <br>
 		    <br>
 		    <figure>
-<img src="img/fig3.png" width="450" height="250">
+<img src="display:block;margin:auto;" src="img/fig3.png" text-align:"center">
 			    <figcaption style="font-family:Helvetica Neue" text-align="center">Figure 3</figcaption>
 		    </figure>
 		    <br>
