--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ figcaption {
 <br>
 		    <br>
 <figure>
-<img style="display:block;margin:auto;" src="img/fig1.png" text-align:"center">
+<img style="display:block;margin:auto;" src="img/fig1.png" text-align:"center" width:"250" height:"500">
 	<figcaption style="font-family:Helvetica Neue" text-align="center">Figure 1</figcaption>
 		    </figure>
 		    <br>
