--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 	  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css' rel='stylesheet' />
-    <title>Healthy Visuals</title>
+    <title>healthy Visuals</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -460,7 +460,7 @@ figcaption {
 		    <br>
 		    <br>
 		    <figure>
-<img src="display:block;margin:auto;" src="img/fig2.png" text-align:"center">
+<img src="display:block;margin:auto;" src="https://flic.kr/p/2kVNpfc" text-align:"center">
 			    <figcaption style="font-family:Helvetica Neue" text-align="center">Figure 2</figcaption>
 		    </figure>
 		    <br>
