--- a/index.html
+++ b/index.html
@@ -460,13 +460,13 @@ figcaption {
 		    <br>
 		    <br>
 		    <figure>
-<img src="display:block;margin:auto;" src="https://flic.kr/p/2kVNpfc" text-align:"center">
+<img style="display:block;margin:auto;" src="img/fig2.png" text-align:"center">
 			    <figcaption style="font-family:Helvetica Neue" text-align="center">Figure 2</figcaption>
 		    </figure>
 		    <br>
 		    <br>
 		    <figure>
-<img src="display:block;margin:auto;" src="img/fig3.png" text-align:"center">
+<img style="display:block;margin:auto;" src="img/fig3.png" text-align:"center">
 			    <figcaption style="font-family:Helvetica Neue" text-align="center">Figure 3</figcaption>
 		    </figure>
 		    <br>
