--- a/index.html
+++ b/index.html
@@ -455,18 +455,18 @@ figcaption {
 		    <br>
 <figure>
 <img style="display:block;margin:auto;" src="img/fig1.png" text-align:"center" width:"250" height:"500">
-	<figcaption style="font-family:Helvetica Neue" text-align="center">Figure 1</figcaption>
+	<figcaption style="font-family:Helvetica Neue" text-align="middle">Figure 1</figcaption>
 		    </figure>
 		    <br>
 		    <br>
 		    <figure>
-<img style="display:block;margin:auto;" src="img/fig2.png" text-align:"center">
+<img style="display:block;margin:auto;" src="img/fig2.png" text-align:"center" width:"250" height:"500">
 			    <figcaption style="font-family:Helvetica Neue" text-align="center">Figure 2</figcaption>
 		    </figure>
 		    <br>
 		    <br>
 		    <figure>
-<img style="display:block;margin:auto;" src="img/fig3.png" text-align:"center">
+<img style="display:block;margin:auto;" src="img/fig3.png" text-align:"center" width:"250" height:"500">
 			    <figcaption style="font-family:Helvetica Neue" text-align="center">Figure 3</figcaption>
 		    </figure>
 		    <br>
@@ -477,10 +477,6 @@ figcaption {
 
 
 		
-		    <section class="page-section portfolio" id="portfolio">
-            <div class="container">
-		     <div class="container">
-		    <p><h2>coclusions</h2></p>
 </div>               
 </div>
     </section>
