--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 	  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css' rel='stylesheet' />
-    <title>healthy Visuals</title>
+    <title>Healthy Visuals</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -454,7 +454,7 @@ figcaption {
 <br>
 		    <br>
 <figure>
-<img style="display:block;margin:auto;" src="img/fig1.png" text-align:"center" width:"250" height:"500">
+<img style="display:block;" src="img/fig1.png" text-align:"center" width:"250" height:"500">
 	<figcaption style="font-family:Helvetica Neue" text-align="middle">Figure 1</figcaption>
 		    </figure>
 		    <br>
