--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 	  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css' rel='stylesheet' />
-    <title>healthy Visuals</title>
+    <title>Healthy Visuals</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -363,11 +363,7 @@ function drawChart3() {
             padding: 0;
             font-family: 'Helvetica Neue', 'Helvetica', 'Arial', Sans-serif;
           }
-img {
-    max-width: 100%;
-text-align: center;
-	display: block;
-}
+
 
 figcaption {
   display: block;
@@ -378,6 +374,12 @@ figcaption {
        height: 100%;	      
         width: 100%;
       }
+	    .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
           </style>
 
 </head>
@@ -454,7 +456,7 @@ figcaption {
 <br>
 		    <br>
 <figure>
-<img src="img/fig1.png" text-align:"center" width:"250" height:"500">
+<img src="img/fig1.png" class="center">
 	<figcaption style="font-family:Helvetica Neue" text-align="middle">Figure 1</figcaption>
 		    </figure>
 		    <br>
