--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 	  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css' rel='stylesheet' />
-    <title>Healthy Visuals</title>
+    <title>healthy Visuals</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -457,18 +457,18 @@ figcaption {
 		    <br>
 <figure>
 <img src="img/fig1.png" class="center">
-	<figcaption style="font-family:Helvetica Neue" text-align="middle">Figure 1</figcaption>
+	<figcaption class="figure-caption text-center">Figure 1</figcaption>
 		    </figure>
 		    <br>
 		    <br>
 		    <figure>
-<img style="display:block;margin:auto;" src="img/fig2.png" text-align:"center" width:"250" height:"500">
+<img src="img/fig2.png" class="center">
 			    <figcaption style="font-family:Helvetica Neue" text-align="center">Figure 2</figcaption>
 		    </figure>
 		    <br>
 		    <br>
 		    <figure>
-<img style="display:block;margin:auto;" src="img/fig3.png" text-align:"center" width:"250" height:"500">
+<img src="img/fig3.png" class="center">
 			    <figcaption style="font-family:Helvetica Neue" text-align="center">Figure 3</figcaption>
 		    </figure>
 		    <br>
