--- a/index.html
+++ b/index.html
@@ -463,13 +463,13 @@ figcaption {
 		    <br>
 		    <figure>
 <img src="img/fig2.png" class="center">
-			    <figcaption style="font-family:Helvetica Neue" text-align="center">Figure 2</figcaption>
+			    <figcaption style="font-family:Helvetica Neue" class="figure-caption text-center">Figure 2</figcaption>
 		    </figure>
 		    <br>
 		    <br>
 		    <figure>
 <img src="img/fig3.png" class="center">
-			    <figcaption style="font-family:Helvetica Neue" text-align="center">Figure 3</figcaption>
+			    <figcaption style="font-family:Helvetica Neue" class="figure-caption text-center">Figure 3</figcaption>
 		    </figure>
 		    <br>
 <br>
