--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 	  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css' rel='stylesheet' />
-    <title>healthy Visuals</title>
+    <title>Healthy Visuals</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -405,13 +405,13 @@ figcaption {
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="index.html">Direct Action</a>
+                        <a href="index.html">HP2020</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="key.html">Implications</a>
+                        <a href="key.html">Visuals</a>
                     </li>
                <li class="page-scroll">
-                        <a href="contact.html">Contact</a>
+                        <a href="contact.html">Map</a>
                     </li>
                 </ul>
             </div>
@@ -441,7 +441,7 @@ figcaption {
 	    <section class="page-section portfolio" id="portfolio">
             <div class="container">
 		     <div class="container">
-		    <p><h2>Visualizing Health</h2></p>
+		    <p><h2>Healthy People 2020</h2></p>
 <br>
  <div class="container">
 <p class="lead">Healthy People 2020 “provides science-based, 10-year national objectives for improving the health of all Americans” (“About Healthy People,” n.d.). The goals of the initiative, as stated by the U.S. government, are three-fold:
