--- a/key.html
+++ b/key.html
@@ -403,13 +403,13 @@ figcaption {
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="index.html">Direct Action</a>
+                        <a href="index.html">HP2020</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="key.html">Implications</a>
+                        <a href="key.html">Visuals</a>
                     </li>
                <li class="page-scroll">
-                        <a href="contact.html">Contact</a>
+                        <a href="contact.html">Map</a>
                     </li>
                 </ul>
             </div>
@@ -426,7 +426,7 @@ figcaption {
 	    <section class="page-section portfolio" id="portfolio">
             <div class="container">
 		     <div class="container">
-		    <p><h2>Visualizing Health</h2></p>
+		    <p><h2>Graphing the Data</h2></p>
 <br>
  <div class="container">
 
