--- a/contact.html
+++ b/contact.html
@@ -118,13 +118,13 @@
                         <a href="#page-top"></a>
                     </li>
                    <li class="page-scroll">
-                        <a href="index.html">Direct Action</a>
+                        <a href="index.html">HP2020</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="key.html">Implications</a>
+                        <a href="key.html">Visuals</a>
                     </li>
                 <li class="page-scroll">
-                        <a href="contact.html">Contact</a>
+                        <a href="contact.html">Map</a>
                     </li>
                 </ul>
             </div>
@@ -191,12 +191,6 @@ map.on('click', function(e) {
 		    <br>
 		    
 		    <div class="container">
-		    <br>
-		    <p><h2>Over Time</h2></p>
-		    <p class="lead">Using data from the New York City Health department and the data retrieval tools from open ny,
-the effects of the Young Lords direct action are clear. After gaining concessions from public health officials for testing, the exponential increase in clinical facilities focused primarily in Harlem and the Bronx brought millions of people closer to accessing Health Care facilities.</p>
-		    </div>
-		  
 
 		    		    <br>
 		    <p><h2>Implications</h2></p>
@@ -207,7 +201,7 @@ the effects of the Young Lords direct action are clear. After gaining concession
 	    </div>
 		<br>
 
-</script>
+
 		    </div>
 		    </section>
 <!--var content = '<h2>' + feature.properties.title + '</h2><img src="' + feature.properties.image + '" alt="">';-->
