--- a/index.html
+++ b/index.html
@@ -437,21 +437,14 @@ figcaption {
                 
             </div>
     </header>
-    <section class="page-section portfolio" id="portfolio">
-            <div class="container">
-		     <div class="container">
-		    <p><h2>About</h2></p>
-		    <p class="lead">The intent of this project is to introduce a public facing federal data retrieval tool, demonstrate its capabilities, and briefly examine its limitations.
-		    
-	    </div>
-	    </div>
-	</section
+
 	    <section class="page-section portfolio" id="portfolio">
             <div class="container">
 		     <div class="container">
 		    <p><h2>Healthy People 2020</h2></p>
 <br>
  <div class="container">
+	  <p class="lead">The intent of this project is to introduce a public facing federal data retrieval tool, demonstrate its capabilities, and briefly examine its limitations.</p>
 <p class="lead">Healthy People 2020 “provides science-based, 10-year national objectives for improving the health of all Americans” (“About Healthy People,” n.d.). The goals of the initiative, as stated by the U.S. government, are three-fold:
 <ol>
 <li>Encourage collaborations across communities and sectors.</li>
