--- a/contact.html
+++ b/contact.html
@@ -168,6 +168,7 @@ map.on('click', function(e) {
 
 
 </script>
+		    <caption> Crosses represent hospital closures and circles indicate area served. The larger the circle, the larger the area served.</caption>
 		    </div>
 	    </section>
 	    <br>
