--- a/php.html
+++ b/php.html
@@ -99,7 +99,7 @@ figcaption {
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">YOUNG LORDS OF NEW YORK</a>
+                <a class="navbar-brand" href="#page-top">Visualizing Access</a>
                 <!--<a class="navbar-brand" href="about.html">About</a>-->
             </div>
 
@@ -110,13 +110,16 @@ figcaption {
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="index.html">Direct Action</a>
+                        <a href="index.html">HP2020</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="key.html">Implications</a>
+                        <a href="key.html">Visuals</a>
                     </li>
                   <li class="page-scroll">
-                        <a href="contact.html">Contact</a>
+                        <a href="contact.html">Map</a>
+                    </li>
+			<li class="page-scroll">
+                        <a href="php.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -128,20 +131,7 @@ figcaption {
 
  <!-- Header -->
 
-<header class="masthead bg-primary text-white text-center">
-            <div class="container d-flex align-items-center flex-column">
-		    <div style="background-image: url('img/output-onlinepngtools.png');">
-                <!-- Masthead Avatar Image-->
-         
-                    <div class="intro-text">
-                        <h1 class="masthead-heading text-uppercase mb-0">All Power to All the People</h1>
-                        <hr class="star-light">
-                       <div class="row">
-                           <p align="center">About the Young Lords</p> 
-                        </div>
-                </div>
-            </div>
-    </header>
+
     
 <section class="page-section" id="contact">
             <div class="container">
