--- a/contact.html
+++ b/contact.html
@@ -126,6 +126,9 @@
                 <li class="page-scroll">
                         <a href="contact.html">Map</a>
                     </li>
+			<li class="page-scroll">
+                        <a href="php.html">Contact</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
