--- a/key.html
+++ b/key.html
@@ -411,6 +411,9 @@ figcaption {
                <li class="page-scroll">
                         <a href="contact.html">Map</a>
                     </li>
+			<li class="page-scroll">
+                        <a href="php.html">Contact</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
