--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ figcaption {
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Visualizing Access</a>
+                <a class="navbar-brand" href="index.html">Visualizing Access</a>
                 <!--<a class="navbar-brand" href="about.html">About</a>-->
             </div>
 
