--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Mapping Closures of Rural Hospitals</a>
+                <a class="navbar-brand" href="index.html">Visualizing Access</a>
                 <!--<a class="navbar-brand" href="about.html">About</a>-->
            </div>
 
