--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ figcaption {
                 <!-- Masthead Avatar Image-->
          
                     <div class="intro-text">
-                        <h1 class="masthead-heading text-uppercase mb-0">Building a Healthier Future for All</h1>
+                        <h1 class="masthead-heading text-uppercase mb-0">"Building a Healthier Future for All"</h1>
                         <hr class="star-light">
                        <div class="row">
                            <p align="center">"Healthy People sets data-driven national objectives to improve health and well-being over the next decade." But what does this look like?</p> 
