--- a/key.html
+++ b/key.html
@@ -513,7 +513,7 @@ figcaption {
 		    <section class="page-section portfolio" id="portfolio">
             <div class="container">
 		     <div class="container">
-		    <p><h2>What does this data show</h2></p>
+		    <p><h2>What does this data show?</h2></p>
 </div>               <p class="lead">Certainly, access to care has shown steady, if not modest growth since data had begun to be collected in 2010. For example, while single people and cohabitating partners saw steady gains in insurance coverage, Americans living right at or below the poverty line saw the largest gains. This is partially explained by the individual mandate and rapid expansion of Medicare in many states passed through the Affordable Care Act. Some states, as we know, did not participate in expanding Medicare, a program to cover those who live below the poverty line and whose recipients are mostly rural. However, data shows a different story.</p>
 </div>
     </section>
